--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
   <!-- ✅ 自分の予約一覧（全車／今日以降すべて／日付ごとにまとめる） -->
   <div id="myList" style="margin-top:12px;">
-    <h3 style="margin:10px 0 6px 0; font-size:16px;">自分の予約一覧（全車／今日以降すべて）</h3>
+    <h3 style="margin:10px 0 6px 0; font-size:16px;">自分の予約一覧</h3>
     <div id="myListBody" class="small">読み込み中…</div>
   </div>
 
