--- a/admin.html
+++ b/admin.html
@@ -93,6 +93,8 @@
       liff.login();
       return false;
     }
+    console.log("my userId =", me.userId);
+
     const profile = await liff.getProfile();
     me.userId = profile.userId;
     me.displayName = profile.displayName;
