--- a/admin.html
+++ b/admin.html
@@ -259,6 +259,9 @@
       const ok = await initLiff();
       if(!ok) return;
 
+      const test = await sb.from("admins").select("*");
+console.log("admins test:", test);
+
       await requireAdmin();
 
       setStatus("読み込み中…");
